--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#navbar a.active {
+  background: rgb(255, 94, 0);
+  font-weight: bold;
+  color: rgb(255, 255, 255);
+}
